web1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: web1
  name: web1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.network/nginx-network: "true"
        io.kompose.service: web1
    spec:
      containers:
        - image: web1
          name: web1
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
