web1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: web1
  name: web1
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
    - name: 8000-tcp
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: web1
status:
  loadBalancer: {}
